--- a/style/main.css
+++ b/style/main.css
@@ -13,6 +13,9 @@ header {
     background-color: #ffffff;
     padding-top: 8px;
     margin-right: 0;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
 .OZIO-title {
